# crypto-cpp

./: .gitignore  CMakeLists.txt  presubmit.sh  starkware-config.cmake.in
cmake/: FindBoostMultiprecision.cmake
libs/: CMakeLists.txt
libs/algebra/: CMakeLists.txt
libs/algebra/test/: CMakeLists.txt
libs/crypto/: CMakeLists.txt
libs/crypto/ffi/: CMakeLists.txt
libs/crypto/ffi/include/starkware/crypto/ffi/: portable_endian.h  utils.h
libs/crypto/ffi/src/: utils.cc
libs/crypto/include/starkware/crypto/: pedersen_hash.h
libs/crypto/src/: ecdsa.cc  pedersen_hash.cc
libs/crypto/test/: CMakeLists.txt
libs/starkex/: CMakeLists.txt
libs/starkex/test/: CMakeLists.txt
libs/utils/: CMakeLists.txt
libs/utils/include/starkware/utils/: math.h
libs/utils/test/: CMakeLists.txt
src/: CMakeLists.txt
src/starkware/algebra/: CMakeLists.txt  big_int.h  big_int.inl
src/starkware/crypto/: CMakeLists.txt
src/starkware/starkex/: CMakeLists.txt
src/starkware/utils/: CMakeLists.txt  prng.h
